<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="1dp"
    app:cardPreventCornerOverlap="true">
    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/colorPrimaryLight"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textAppearance="?attr/textAppearanceSubtitle2"/>
            <TextView
                android:id="@+id/product_mark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:textSize="12sp"
                android:text="@string/product_mark"
                android:textColor="@color/black"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/product_price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/product_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="2dp"
                    android:text="@string/product_discount"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#D8C811"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/product_amount_decrease"
                    android:layout_width="35dp"
                    android:layout_height="33dp"
                    app:icon="@drawable/menos_16"
                    app:iconGravity="textStart|end"/>
                <TextView
                    android:layout_marginLeft="3dp"
                    android:text="1"
                    android:gravity="center"
                    android:id="@+id/text_product_amount"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_toRightOf="@+id/product_amount_decrease"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/product_amount_increase"
                    android:layout_width="35dp"
                    android:layout_height="33dp"
                    android:layout_alignParentEnd="true"
                    app:iconGravity="textStart|end"
                    app:icon="@drawable/mas_16"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>