<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="145dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="1dp"
    app:cardPreventCornerOverlap="true">
    <LinearLayout
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/product_image_crud"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:background="@color/colorPrimaryLight"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/product_name_crud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textAppearance="?attr/textAppearanceSubtitle2"/>
            <TextView
                android:id="@+id/product_mark_crud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:textSize="12sp"
                android:text="@string/product_mark"
                android:textColor="@color/black"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/product_price_crud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/product_price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/product_stock_crud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="2dp"
                    android:text="@string/product_stock"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#D8C811"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />


            </RelativeLayout>
            <TextView
                android:id="@+id/product_state_crud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="state"
                android:textColor="@color/black"
                android:textAppearance="?attr/textAppearanceSubtitle2"/>
        </LinearLayout>
        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_product"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginRight="2dp"
                android:backgroundTint="#6BA60C"
                app:icon="@drawable/edit"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete_product"
                android:layout_marginLeft="2dp"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/btn_edit_product"
                android:backgroundTint="#E91E63"
                app:icon="@drawable/delete"/>
        </RelativeLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>